# slop

./: .gitignore  CLAUDE.md  README.md
cache/stats/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
cache/stats/crates/ingest/: Cargo.toml
cache/stats/crates/stats/: Cargo.toml
cache/stats/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
cache/stats/frontend/src/: App.tsx  index.css
llama-proxy/: CLAUDE.md  Cargo.toml  PLAN.md  README.md  config.yaml.default  rustfmt.toml
llama-proxy/.claude/: settings.local.json
llama-proxy/.sisyphus/notepads/llama-proxy-bug-fixes/: learnings.md
llama-proxy/augmenter/: backend_prompt.md  request_prompt.md
llama-proxy/e2e/: Cargo.toml  README.md
llama-proxy/e2e/src/: backend.rs  client.rs  main.rs  runner.rs  types.rs
llama-proxy/e2e/src/tests/: basic.rs  helpers.rs  mod.rs  passthrough.rs  toolcall.rs
llama-proxy/e2e/test_configs/: proxy_fixes_off.yaml  proxy_fixes_on.yaml
llama-proxy/src/: augment.rs  lib.rs  main.rs
llama-proxy/src/api/: llama.rs  mod.rs  openai.rs
llama-proxy/src/augment/: client.rs  extraction.rs  injection.rs  mod.rs
llama-proxy/src/backends/: balancer.rs  grouped.rs  mod.rs  node.rs  preflight.rs  priority_free.rs  round_robin.rs
llama-proxy/src/config/: loader.rs  mod.rs
llama-proxy/src/exporters/: influxdb.rs  mod.rs
llama-proxy/src/fixes/: mod.rs  registry.rs  toolcall_bad_filepath_fix.rs  toolcall_malformed_arguments_fix.rs  toolcall_null_index_fix.rs
llama-proxy/src/proxy/: context.rs  handler.rs  mod.rs  server.rs  streaming.rs  synthesis.rs
llama-proxy/src/stats/: collector.rs  formatter.rs  mod.rs  request_log.rs
mcp/wiki/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  justfile  main.md
mcp/wiki/context/: current_state.md
mcp/wiki/crates/bin_ingest/: Cargo.toml
mcp/wiki/crates/bin_server/: Cargo.toml
mcp/wiki/crates/lib_chunking/: Cargo.toml
mcp/wiki/crates/lib_common/: Cargo.toml
mcp/wiki/crates/lib_embeddings/: Cargo.toml
mcp/wiki/crates/lib_mcp/: Cargo.toml
mcp/wiki/crates/lib_vector/: Cargo.toml
mcp/wiki/crates/lib_wiki_parse/: Cargo.toml
qbots/: .gitignore  2026-06-15-145850-local-command-caveatcaveat-the-messages-below.txt  AGENTS.md  Cargo.toml  README.md  config.example.yaml  config.test.yaml  justfile  primes.sh  primes2.sh
qbots/.claude/: settings.local.json
qbots/context/: acceptance.md  bot_perf.md  brain_notes.md  bridges.md  distilled.md  elevator_todo.md  map_errors.notes.log.md  mode_perf.md  nav_state_2026-06-18.md  navmesh_spike_2026-06-18.md  pitfalls.md
qbots/context/distilled/: eraser.md  quake3.md  xonotic.md
qbots/context/distilled/brains/: 3zb2_brain.md  brain_priorities.md  keys_brain.md
qbots/context/distilled/pathing/: 3zb2.md  3zb2_linking.md  ace_bot.md  are_we_fucking_up_with_grid.md  bot_comparison.md  classic_bots_summary.md  crbot.md  eraser.md  gladiator_bot.md  jabot_navigation.md  keys_bot.md  nav_approaches_comparison.md  water_nav.md  what_bots_do.md
qbots/context/plans/: 01_workspace_scaffold.md  01_workspace_scaffold_tracker.md  02_wire_codec_q2proto_tracker.md  03_connection_client_tracker.md  04_frame_loop_tracker.md  05_world_model.md  05_world_model_tracker.md  06_brain.md  06_brain_tracker.md  07_eraser_brain_enhancements.md  07_eraser_brain_enhancements_tracker.md  07_fleet.md  08_danger_heatmap_nav.md  08_danger_heatmap_nav_tracker.md  09_fleet.md  09_fleet_tracker.md  10_movement_test_harness.md  10_movement_test_harness_tracker.md  11_los_perception.md  11_los_perception_tracker.md  12_steering_controller_tracker.md  13_stuck_recovery_wall_avoid_tracker.md  14_navgraph_path_quality.md  14_navgraph_path_quality_tracker.md  15_nav_graph_overhaul.md  15_scenario_nav_parity_tracker.md  16_bsp_nav_metrics.md  16_bsp_parsing_fix.md  16_observation_learning.md  17_bsp_step_hardening.md  18_map_cache_pregeneration.md  18_map_cache_pregeneration_tracker.md  19_fleet_reach_validation.md  19_fleet_reach_validation_tracker.md  20_hybrid_nav_modes.md  20_hybrid_nav_modes_tracker.md  21_competition_runner.md  21_competition_runner_tracker.md  22_brain_seam_extraction.md  22_brain_seam_extraction_tracker.md  (+91 more)
qbots/context/plans/abandoned/: 15_nav_graph_overhaul.md  16_bsp_nav_metrics.md  16_observation_learning.md  58_shared_locomotion_extraction.md  58_shared_locomotion_extraction_tracker.md  bsp_parsing_analysis.md  bsp_parsing_comparison_report.md
qbots/context/plans/completed/: 02_wire_codec_q2proto.md  03_connection_client.md  03_connection_client_tracker.md  04_frame_loop.md  04_frame_loop_tracker.md  05_world_model.md  06_brain.md  06_brain_tracker.md  (+105 more)
qbots/crates/brain/: Cargo.toml  README.md
qbots/crates/client/: Cargo.toml  README.md
qbots/crates/q2proto/: Cargo.toml  README.md
qbots/crates/qbots/: Cargo.toml  README.md
qbots/crates/tools/: Cargo.toml  README.md
qbots/crates/world/: Cargo.toml  README.md
qbots/data/: q3_comp_logs
qbots/docs/: BRAINS.md
qctrl/: .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  config.defaults.yaml  config.test.yaml  config.yaml  favorites.json  justfile  rotation.yaml
qctrl/.claude/: settings.local.json
qctrl/context/: pitfalls.md
qctrl/context/plans/: 02_map_listing.md  03_frontend_scaffolding.md  04_deathmatch_controls.md  07_log_streaming.md  12_sv_maplist_resilience.md  12_sv_maplist_resilience_tracker.md  13_serverframe_beacon.md  13_serverframe_beacon_tracker.md  RULES.md  SERIES.md
qctrl/crates/api/: Cargo.toml
qctrl/crates/rcon/: Cargo.toml
qctrl/crates/tools/: Cargo.toml
qctrl/deploy/: build.sh  config.production.yaml  nginx.conf  qctrl.service
qctrl/frontend/: .gitignore  e2e-applyLogic.js  e2e-test.js  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
qctrl/frontend/e2e/: rotation.test.ts
qctrl/frontend/src/: App.tsx  index.css
rt/ascii-rt-glm5/: Cargo.toml  view_debug.sh
rt/ascii-rt-glm5/src/: lib.rs  main.rs  renderer.rs  scene.rs  terminal.rs  vulkan.rs
(+363 files in other folders)
