[workspace]
resolver = "2"
members = [
    "crates/q2proto",
    "crates/world",
    "crates/client",
    "crates/brain",
    "crates/qbots",
    "crates/tools",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
glam = "0.27"
bytes = "1"
serde = { version = "1", features = ["derive"] }
