[workspace]
members = ["crates/api", "crates/rcon", "crates/tools"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
axum = { version = "0.7", features = ["ws"] }
thiserror = "1.0"
tokio-stream = "0.1"
