[workspace]
resolver = "2"
members  = ["crates/ingest", "crates/stats"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
