[package]
name = "llama-proxy-e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end tests for llama-proxy - standalone, no shared code with proxy"

[[bin]]
name = "e2e"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (mock backend)
axum = "0.7"
tower = "0.5"

# HTTP client (mock client to proxy)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Output
colored = "2"

# Async utilities
futures = "0.3"
anyhow = "1"
bytes = "1"
