[workspace]
resolver = "2"
members = [
    "crates/lib_common",
    "crates/lib_wiki_parse",
    "crates/lib_chunking",
    "crates/lib_embeddings",
    "crates/lib_vector",
    "crates/lib_mcp",
    "crates/bin_ingest",
    "crates/bin_server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
