[package]
name = "ascii_rt_glm5"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38"
gpu-allocator = "0.27"
nalgebra = "0.33"
crossterm = "0.28"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "ascii_rt_glm5"
path = "src/main.rs"

[lib]
name = "ascii_rt_glm5"
path = "src/lib.rs"
