[package]
name = "qbots"
version = "0.1.0"
edition.workspace = true

[dependencies]
brain = { path = "../brain" }
client = { path = "../client" }
clap = { version = "4", features = ["derive"] }
glam = "0.29"
q2proto = { path = "../q2proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
time = "0.3"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
world = { path = "../world" }

[dev-dependencies]
tempfile = "3"
