[package]
name = "tools"
version = "0.1.0"
edition.workspace = true

[dependencies]
world = { path = "../world" }
brain = { path = "../brain" }
client = { path = "../client" }
q2proto = { path = "../q2proto" }
tokio = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }

[[bin]]
name = "bsp_verify"
path = "src/bin/bsp_verify.rs"

[[bin]]
name = "navinspect"
path = "src/bin/navinspect.rs"

[[bin]]
name = "gridscan"
path = "src/bin/gridscan.rs"

[[bin]]
name = "compgaps"
path = "src/bin/compgaps.rs"

[[bin]]
name = "acceptance"
path = "src/bin/acceptance.rs"
