[package]
name    = "pkgcache-ingest"
version = "0.1.0"
edition.workspace = true

# DELIBERATELY near-zero dependencies. This crate is the correctness core --
# line parsing, URI classification, chunk splitting, package-name parsing and
# aggregation -- and holds NO I/O: no filesystem, no sqlite, no tokio. That is
# what lets `cargo test -p pkgcache-ingest` run in under a second with no
# fixtures and no database. Adding a dependency here needs a justification in
# the commit message.
[dependencies]
serde.workspace     = true
thiserror.workspace = true
