[package]
name = "bin_ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ingest"
path = "src/main.rs"

[dependencies]
lib_common = { path = "../lib_common" }
lib_wiki_parse = { path = "../lib_wiki_parse" }
lib_chunking = { path = "../lib_chunking" }
lib_embeddings = { path = "../lib_embeddings" }
lib_vector = { path = "../lib_vector" }
qdrant-client = "1.18"
clap = { version = "4.4", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
