[package]
name = "bin_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
lib_common = { path = "../lib_common" }
lib_embeddings = { path = "../lib_embeddings" }
lib_vector = { path = "../lib_vector" }
qdrant-client = "1.18"
tokio = { workspace = true, features = ["full", "signal"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
