[package]
name = "lib_mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lib_common = { path = "../lib_common" }
rmcp = { version = "0.16", features = ["server"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
