[package]
name = "lib_vector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qdrant-client = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
lib_embeddings = { path = "../lib_embeddings" }
