[package]
name = "lib_wiki_parse"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lib_common = { path = "../lib_common" }
quick-xml = "0.31"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
